--- a/packages/styled-components/package.json
+++ b/packages/styled-components/package.json
@@ -64,7 +64,7 @@
     "tslib": "2.6.2"
   },
   "peerDependencies": {
-    "react": ">= 16.8.0",
+    "react": ">= 16.8.0 || ^17 || ^18 || ^19",
     "react-dom": ">= 16.8.0"
   },
   "devDependencies": {
