--- a/packages/styled-components/package.json
+++ b/packages/styled-components/package.json
@@ -64,8 +64,8 @@
     "tslib": "2.6.2"
   },
   "peerDependencies": {
-    "react": ">= 16.8.0 || ^17 || ^18 || ^19",
-    "react-dom": ">= 16.8.0"
+    "react": "^19.2.0",
+  "react-dom": ">=16.8.0"
   },
   "devDependencies": {
     "@babel/core": "^7.24.5",
